[Master] Initialized indexBundle for index and reconfigured propel.

--- a/Symfony/app/config/config.yml
+++ b/Symfony/app/config/config.yml
@@ -65,11 +65,12 @@ swiftmailer:
     spool:     { type: memory }
 
 propel:
-    path:       "%kernel.root_dir%/../vendor/propel"
-    phing_path: "%kernel.root_dir%/../vendor/phing"
-    driver:               %database_driver%
-    user:                 %database_user%
-    password:             %database_password%
-    dsn:                  %database_driver%:host=%database_host%;dbname=%database_name%;charset=UTF8
-    options:              {}
-    attributes:           {}
+    dbal:
+#        path:                 "%kernel.root_dir%/../vendor/propel"
+#        phing_path:           "%kernel.root_dir%/../vendor/phing"
+        driver:               %database_driver%
+        user:                 %database_user%
+        password:             %database_password%
+        dsn:                  %database_driver%:host=%database_host%;dbname=%database_name%;charset=UTF8
+        options:              {}
+        attributes:           {}
