--- a/Symfony/app/config/config.yml
+++ b/Symfony/app/config/config.yml
@@ -29,7 +29,7 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:        ['gipsydangerindexBundle']
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
