--- a/Symfony/src/gipsydanger/indexBundle/Resources/config/routing.yml
+++ b/Symfony/src/gipsydanger/indexBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 gipsydangerindex_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: gipsydangerindexBundle:Default:index }
+    pattern:  /
+    defaults: { _controller: gipsydangerindexBundle:index:index }
