--- a/Symfony/app/config/config.yml
+++ b/Symfony/app/config/config.yml
@@ -30,7 +30,7 @@ assetic:
     debug:          %kernel.debug%
     use_controller: false
     bundles:
-        ['gipsydangerindexBundle','gipsydangerpeopleBundle','gipsydangersearchBundle']
+        ['gipsydangerindexBundle','gipsydangerpeopleBundle','gipsydangersearchBundle','gipsydangermessageBundle']
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
