[Master] Added route for coach and normal sign up

--- a/Symfony/src/gipsydanger/peopleBundle/Resources/config/routing.yml
+++ b/Symfony/src/gipsydanger/peopleBundle/Resources/config/routing.yml
@@ -9,3 +9,11 @@ gipsydangerpeople_login:
 gipsydangerpeople_signup:
     pattern:  /sign-up/
     defaults: { _controller: gipsydangerpeopleBundle:accounts:signup }
+
+gipsydangerpeople_signup_coach:
+    pattern: /sign-up/coach/
+    defaults: {_controller: gipsydangerpeopleBundle:accounts:signupForm, type: coach}
+
+gipsydangerpeople_signup_user:
+    pattern: /sign-up/normal/
+    defaults: {_controller: gipsydangerpeopleBundle:accounts:signupForm, type: normal}
