--- a/Symfony/src/gipsydanger/searchBundle/Resources/config/routing.yml
+++ b/Symfony/src/gipsydanger/searchBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 gipsydangersearch_homepage:
-    pattern:  /hello/{name}
+    pattern:  /search/
     defaults: { _controller: gipsydangersearchBundle:Default:index }
