--- a/Symfony/app/config/config.yml
+++ b/Symfony/app/config/config.yml
@@ -75,3 +75,4 @@ propel:
         dsn:                  %database_driver%:host=%database_host%;dbname=%database_name%;charset=UTF8
         options:              {}
         attributes:           {}
+    logging:              %kernel.debug%
