[Master] Built model classes for User system and began bootstrapping register system. We may want to switch to a bootstrap bundle.

--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -12,7 +12,10 @@ security:
                 users:
                     user:  { password: userpass, roles: [ 'ROLE_USER' ] }
                     admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
-
+        main:
+            propel:
+                class: gipsydanger\peopleBundle\Model\Users
+                property: email
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
@@ -35,5 +38,5 @@ security:
             #    realm: "Secured Demo Area"
 
     access_control:
-        - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
+        - { path: ^/profile, roles: ROLE_ADMIN }
         #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
