--- a/Symfony/app/config/config.yml
+++ b/Symfony/app/config/config.yml
@@ -24,7 +24,9 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
-
+    form:
+        resources:
+            - 'AcmeDemoBundle:Form:bootstrap_form.html.twig'
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
