--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -33,9 +33,12 @@ security:
             logout:
                 path:   _demo_logout
                 target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
+        secured_area:
+            pattern: ^/profile
+            anonymous: ~
+            security: true
+            http_basic:
+                realm: "Secured Demo Area"
 
     access_control:
         - { path: ^/profile, roles: ROLE_ADMIN }
