--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -1,44 +1,44 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        gipsydanger\peopleBundle\Model\Users:
+            algorithm: sha1
+            iterations: 10
+            encode_as_base64: false
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
         main:
             propel:
                 class: gipsydanger\peopleBundle\Model\Users
                 property: email
     firewalls:
-        dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+         dev:
+             pattern:  ^/(_(profiler|wdt)|css|images|js)/
+             security: false
 
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
+         login:
+             pattern:  ^/demo/secured/login$
+             security: false
 
-        secured_area:
-            pattern:    ^/demo/secured/
-            form_login:
-                check_path: _security_check
-                login_path: _demo_login
-            logout:
-                path:   _demo_logout
-                target: _demo
-        secured_area:
-            pattern: ^/profile
-            anonymous: ~
-            security: true
-            http_basic:
-                realm: "Secured Demo Area"
+        # secured_area:
+        #     pattern:    ^/demo/secured/
+        #     form_login:
+        #         check_path: _security_check
+        #         login_path: _demo_login
+        #     logout:
+        #         path:   _demo_logout
+                # target: _demo
+
+         messages:
+             pattern: ^/inbox/
+             security: true
+             anonymous: ~
+             http_basic:
+                 realm: 'Secure!'
+
 
     access_control:
         - { path: ^/profile, roles: ROLE_ADMIN }
