--- a/Symfony/src/gipsydanger/messageBundle/Resources/config/routing.yml
+++ b/Symfony/src/gipsydanger/messageBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-gipsydangermessage_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: gipsydangermessageBundle:Default:index }
+gipsydangermessage_inbox:
+    pattern:  /messages/inbox
+    defaults: { _controller: gipsydangermessageBundle:inbox:show }
