[Master] Fix typo

--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -35,7 +35,7 @@ security:
          messages:
              pattern: ^/messages/
              security: true
-             form_login: ~
+             http_basic:
                  realm: 'Secure!'
 
 
